erDiagram
  users ||--o{ leads : owns
  users ||--o{ accounts : owns
  accounts ||--o{ contacts : includes
  accounts ||--o{ deals : signs
  users ||--o{ deals : manages
  deals ||--o{ activities : logs
  leads ||--o{ activities : logs
  users ||--o{ activities : performs

  users {
    bigint id PK
    text email
  }

  leads {
    bigint id PK
    bigint owner_id FK
    text status
  }

  accounts {
    bigint id PK
    bigint owner_id FK
    text name
  }

  contacts {
    bigint id PK
    bigint account_id FK
    text email
  }

  deals {
    bigint id PK
    bigint account_id FK
    bigint owner_id FK
    text stage
    int amount_cents
  }

  activities {
    bigint id PK
    bigint deal_id FK
    bigint lead_id FK
    bigint user_id FK
    text type
  }
